--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -7,4 +7,6 @@
   margin-left: auto;
   margin-right: auto;
   overflow: hidden;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.377);
 }
