Add Views and Routes

--- a/src/views/Login/Login.module.scss
+++ b/src/views/Login/Login.module.scss
@@ -1,8 +1,8 @@
-.RegisterTitle {
+.LoginTitle {
   text-align: center;
 }
 
-.RegisterForm {
+.LoginForm {
   display: flex;
   flex-direction: column;
   padding: 20px;
