--- a/src/components/FormAddContact/FormAddContact.module.scss
+++ b/src/components/FormAddContact/FormAddContact.module.scss
@@ -3,9 +3,12 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
-  padding: 20px;
-  border: 1px solid #000000;
+  padding: 5px 20px;
   background-color: #fff;
+  box-shadow: 0px 0px 7px 4px #ca7171;
+}
+.text {
+  margin-bottom: 10px;
 }
 
 .labelTitle {
